--- a/src/main/resources/assets/mcaerial/lang/en_us.lang
+++ b/src/main/resources/assets/mcaerial/lang/en_us.lang
@@ -4,16 +4,21 @@ tile.ruby_block.name=Block of Ruby
 tile.shield_block.name=Shield Block
 tile.firefly_jar_block.name=Firefly Jar
 
+
 //Items
 item.ruby.name=Ruby
 item.obsidian_orb.name=Obsidian Orb
+item.plane_spawn_egg.name=Plane
+
 
 //Tools
 item.obsidian_sword.name=Obsidian Sword
 
+
 //Entity
 entity.go_kart.name=Go Kart
 entity.plane.name=Plane
+
 
 //Creative Tabs
 itemGroup.mcaerial_mod_tab=Aerial Mod
