implemented gui for drafting table
Added a gui that would pop off when the player right clicks the drafting table. The gui itself is still at a very basic stage that does nothing tho.

--- a/src/main/resources/assets/mcaerial/lang/en_us.lang
+++ b/src/main/resources/assets/mcaerial/lang/en_us.lang
@@ -3,7 +3,7 @@
 tile.ruby_block.name=Block of Ruby
 tile.shield_block.name=Shield Block
 tile.firefly_jar_block.name=Firefly Jar
-
+tile.drafting_table_block.name=Drafting Table
 
 //Items
 item.ruby.name=Ruby
